2004/03/25 21:45 (-0500) muppetman

	* NEWS: merged from stable, so we'll have it in future versions.

	* README, xs/GdkRgb.xs, xs/GdkTypes.xs, xs/Gtk2.xs,
	xs/GtkSelection.xs, xs/GtkTreeSelection.xs: various fixes merged
	from stable

2004/03/25 21:24 (-0500) muppetman

	* examples/cellrenderer_popup.pl: update version check now that
	1.040 is out.

	* examples/combo_box.pl, examples/file_chooser.pl: use the correct
	version check API.

2004/03/24 01:35 (+0100) kaffeetisch

	* t/GtkFileChooser.t: Set select_multiple to FALSE again to make
	the preview stuff work.

	* t/GtkListStore.t: Change the values passed to reorder() to
	something that works for all gtk+ versions.

2004/03/21 14:01 (-0500) muppetman

	* xs/GtkMenu.xs: un-hide gtk2perl_menu_pos_func, which is indeed
	a public symbol.

2004/03/20 22:52 (-0500) muppetman

	A examples/dialog.pl
	M MANIFEST
	  add dialog examples from stable

2004/03/20 22:48 (-0500) muppetman

	* gtk-demo/main.pl, t/GdkCursor.t, t/GdkDrawable.t, t/GdkPixbuf.t,
	t/GtkAccelGroup.t, t/GtkAlignment.t, t/GtkButton.t, t/GtkButtonBox.t,
	t/GtkCellRenderer.t, t/GtkCheckMenuItem.t, t/GtkClipboard.t,
	t/GtkDnd.t, t/GtkEntry.t, t/GtkIconFactory.t, t/GtkMenu.t,
	t/GtkRadioMenuItem.t, t/GtkScale.t, t/GtkStyle.t, t/GtkTextBuffer.t,
	t/GtkTextIter.t, t/GtkTextView.t, t/GtkToolbar.t,
	xs/GtkTreeViewColumn.xs: bump version checks

	* t/GdkEvent.t, t/GdkGC.t, t/GdkProperty.t, xs/GdkEvent.xs,
	xs/GdkProperty.xs, xs/GtkDialog.xs, gtk-demo/changedisplay.pl,
	xs/GdkWindow.xs, xs/GtkObject.xs, examples/item_factory_demo.pl:
	clean up and bugfixes merged from stable

2004/03/20 20:47 (-0500) muppetman

	More merging from the stable-1-04 branch.

	* gtk-demo/sizegroup.pl, gtk-demo/textview.pl: bump 2.3 version
	requirements to 2.4

	* xs/GdkEvent.xs, xs/GtkAccelGroup.xs, xs/GtkAccelMap.xs,
	xs/GtkItemFactory.xs, xs/GtkMenu.xs, xs/GtkTreeView.xs: remove
	private functions from the ABI

2004/03/16 22:55 (-0500) muppetman
